# madrona_simple_example

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  pyproject.toml  run.sh  setNpuNum.sh
scripts/: comm.py  input_helper.py  node_conversion.py  parse_chakra.py  run.py  run_ori.py
scripts/input/: npu.0.json  npu.1.json  npu.2.json
src/: 2_build_topo_mflow.cpp  2_build_topo_mflow.hpp  2_fib_nexthop_init_mflow.hpp  2_flow_mflow.hpp  2_sim_mflow.cpp  2_sim_mflow.hpp  2_types_mflow.hpp  CMakeLists.txt  bindings.cpp  build_topo.cpp  build_topo.cpp.bak  build_topo.cpp_fattree8  build_topo.hpp  calc_fib_table.cpp  fib_nexthop_init.hpp  git_manage.sh  grid.hpp  init.hpp  mgr.cpp  mgr.hpp  myQueue.cpp  myQueue.hpp  sim.cpp  sim.hpp  test_sim.cpp  types.hpp
src/astra-sim/common/: AstraNetworkAPI.hh  AstraRemoteMemoryAPI.hh  AstraSimDataAPI.hh  Common.hh
src/astra-sim/network_frontend/analytical/common/: CallbackTracker.cc  CallbackTrackerEntry.cc  ChunkIdGenerator.cc  ChunkIdGeneratorEntry.cc  CmdLineParser.cc  CommonNetworkApi.cc
src/astra-sim/network_frontend/analytical/congestion_unaware/: CongestionUnawareNetworkApi.cc  CongestionUnawareNetworkApi.hh  main.cc
src/astra-sim/network_frontend/analytical/include/common/: CallbackTracker.hh  CallbackTrackerEntry.hh  ChunkIdGenerator.hh  ChunkIdGeneratorEntry.hh  CmdLineParser.hh  CommonNetworkApi.hh
src/astra-sim/network_frontend/analytical/include/congestion_unaware/: CongestionUnawareNetworkApi.hh
src/astra-sim/system/: AstraNetworkAPI.hh  AstraRemoteMemoryAPI.hh  AstraSimDataAPI.hh  BaseStream.cc  BaseStream.hh  BasicEventHandlerData.cc  BasicEventHandlerData.hh  CSVWriter.cc  CSVWriter.hh  CallData.hh  Callable.hh  CollectivePhase.cc  CollectivePhase.hh  CollectivePlan.cc  CollectivePlan.hh  Common.hh  CommunicatorGroup.cc  CommunicatorGroup.hh  DataSet.cc  DataSet.hh  IntData.hh  LogGP.cc  LogGP.hh  MemBus.cc  MemBus.hh  MemEventHandlerData.cc  MemEventHandlerData.hh  MemMovRequest.cc  MemMovRequest.hh  MyPacket.cc  MyPacket.hh  NetworkStat.hh  PacketBundle.cc  PacketBundle.hh  QueueLevelHandler.cc  QueueLevelHandler.hh  QueueLevels.cc  QueueLevels.hh  RecvPacketEventHandlerData.cc  RecvPacketEventHandlerData.hh  (+24 more)
src/astra-sim/system/collective/: Algorithm.cc  Algorithm.hh  AllToAll.cc  AllToAll.hh  DoubleBinaryTreeAllReduce.cc  DoubleBinaryTreeAllReduce.hh  HalvingDoubling.cc  HalvingDoubling.hh  Ring.cc  Ring.hh
src/astra-sim/system/scheduling/: OfflineGreedy.cc  OfflineGreedy.hh
src/astra-sim/system/topology/: BasicLogicalTopology.hh  BinaryTree.cc  BinaryTree.hh  ComplexLogicalTopology.hh  DoubleBinaryTreeTopology.cc  DoubleBinaryTreeTopology.hh  GeneralComplexTopology.cc  GeneralComplexTopology.hh  LocalRingGlobalBinaryTree.cc  LocalRingGlobalBinaryTree.hh  LocalRingNodeA2AGlobalDBT.cc  LocalRingNodeA2AGlobalDBT.hh  LogicalTopology.hh  Node.cc  Node.hh  RingTopology.cc  RingTopology.hh  Torus3D.cc  Torus3D.hh
src/astra-sim/workload/: HardwareResource.cc  HardwareResource.hh  Workload.cc  Workload.hh
src/bak/: build_topo.cpp  build_topo.cpp.bak  build_topo.cpp_fattree8  build_topo.hpp  build_topo_mflow.cpp  build_topo_mflow.hpp  build_topo_mflows.cpp  calc_fib_table.cpp  dcqcn.cpp  dcqcn.hpp  fib_nexthop_init.hpp  fib_nexthop_init_12.hpp  fib_nexthop_init_4.hpp  fib_nexthop_init_8.hpp  fib_nexthop_init_mflow.hpp  flow.hpp  flow_mflow.hpp  mgr.cpp.bak  myQueue.cpp  myQueue.hpp  sim.cpp  sim.hpp  sim_mflow.cpp  sim_mflow.hpp  sim_pfc.cpp  test_sim.cpp  types.hpp  types_mflow.hpp
src/madrona_simple_example/: __init__.py  gridworld.py
src/sys_layer/: Astrasim.cpp  Astrasim.hpp  ChunkIdGeneratorEntry.cc  ChunkIdGeneratorEntry.cpp  ChunkIdGeneratorEntry.hh  HelperTool.cpp  HelperTool.hpp  cuda_compatible_containers.hpp  sysComponent.cpp  sysComponent.hpp
src/sys_layer/astra-sim/network_frontend/analytical/common/: CallbackTrackerEntry.cc  CallbackTrackerEntry.cpp  CallbackTrackerEntry.hh  CallbackTrackerEntry.hpp  ChunkIdGenerator.cc  ChunkIdGenerator.cpp  ChunkIdGenerator.hpp  ChunkIdGeneratorEntry.cpp  ChunkIdGeneratorEntry.hpp  Event.cpp  Event.hpp
src/sys_layer/astra_wrapper/network/: NetworkWrapper.cpp  NetworkWrapper.hpp
src/sys_layer/astra_wrapper/system/: SystemLayerComponent.hpp
src/sys_layer/containers/: CustomMap.hpp  CustomOptional.hpp  CustomTuple.hpp  CustomVector.hpp  FixedCallback.hpp  FixedChunkId.hpp  FixedConfig.hpp  FixedMap.hpp  FixedOptional.hpp  FixedQueue.hpp  FixedString.hpp  FixedTuple.hpp  FixedVector.hpp  Optional.hpp  Pair.hpp
